--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "client": "file:",
+    "framer-motion": "^11.11.8",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
