--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "client": "file:",
     "framer-motion": "^11.11.8",
-    "next": "14.2.15",
-    "react": "^18",
+    "next": "^14.2.15",
+    "react": "^18.3.1",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/next": "^8.0.7",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
