--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-video": "^1.2.0",
     "random-avatar-generator": "^2.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/next": "^8.0.7",
